feat(recovery): adds user password recovery mechanizm
feat(docs): adds new endpoints into README and swagger spec
