# server/handlers/auth/recovery/views.go
@@ -1,0 +1,6 @@
+package recovery
+
+// TokenView
+type TokenView struct {
+	Token string `json:"recovery_token"`
+}
